Show localization toggle, fix layout issue in RTL mode

--- a/source/stylesheets/_component__nav.scss
+++ b/source/stylesheets/_component__nav.scss
@@ -94,6 +94,7 @@
   position: absolute;
   right: 0;
   top: $grid-unit-8;
+  z-index: 2;
 
   a {
     color: $white;
